--- a/front/Repository/Repository.csproj
+++ b/front/Repository/Repository.csproj
@@ -115,6 +115,9 @@
     <EmbeddedResource Include="Properties\Repository.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client">
+      <Version>5.2.4</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.0.8</Version>
     </PackageReference>
