Fixed login, sending messages. Recieving messages ok but can't decrypt

--- a/frontend/frontend/frontend.csproj
+++ b/frontend/frontend/frontend.csproj
@@ -60,6 +60,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="RecievedPage.xaml.cs">
+      <DependentUpon>RecievedPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="HomePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -93,6 +96,10 @@
       <DependentUpon>LogoutPage.xaml</DependentUpon>
     </Compile>
     <Page Include="MessagePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="RecievedPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
