--- a/api/pom.xml
+++ b/api/pom.xml
@@ -14,9 +14,11 @@
         <version>1.4.1.RELEASE</version>
     </parent>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
+        <docker.image.prefix>${env.DOCKER_REGISTRY}</docker.image.prefix>
+        <docker.registry>${env.DOCKER_REGISTRY}</docker.registry>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>be.pxl.Application</start-class>
@@ -137,6 +139,37 @@
             <artifactId>activemq-broker</artifactId>
             <version>5.14.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.spotify/docker-maven-plugin -->
+        <dependency>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>0.4.11</version>
+        </dependency>
+
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.11</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/java</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                    <serverId>${docker.registry}</serverId>
+                    <registryUrl>https://${docker.registry}</registryUrl>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
 
 </project>
