--- a/frontend/frontend/frontend.csproj
+++ b/frontend/frontend/frontend.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ChatboxPage.xaml.cs">
       <DependentUpon>ChatboxPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\Adress.cs" />
     <Compile Include="Models\StatsSource.cs" />
     <Compile Include="NewUserWindow.xaml.cs">
       <DependentUpon>NewUserWindow.xaml</DependentUpon>
@@ -79,9 +80,6 @@
     </Compile>
     <Compile Include="RecievedPage.xaml.cs">
       <DependentUpon>RecievedPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="SettingsPage.xaml.cs">
-      <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utils\SteganographyHelper.cs" />
     <Page Include="ChatboxPage.xaml">
@@ -133,10 +131,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="RecievedPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="SettingsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
